force-app/main/default/objects/custom_create367__c/custom_create367__c.object-meta.xml
<CustomObject>
    <label>Custom created object367</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects367</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>