force-app/main/default/objects/custom_create367__c/fields/custom_create_367field556__c.field-meta.xml
<CustomField>
    <fullName>custom_create_367field556__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 367field556</label>
    <type>Checkbox</type>
</CustomField>