force-app/main/default/objects/custom_create367__c/fields/custom_create_367field567__c.field-meta.xml
<CustomField>
    <fullName>custom_create_367field567__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 367field567</label>
    <type>Checkbox</type>
</CustomField>